# cbass

./: .env.ip-only  .gitignore  .gitmodules  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLONE_MODIFY_DEPLOY_VPS_GUIDE.md  Caddyfile  DEPLOYMENT.md  README.md  docker-compose.override.private.supabase.yml  docker-compose.override.private.yml  docker-compose.override.public.yml  docker-compose.yml  env.example  opencode.json  start_services.py  wrap_flowise.ps1
.claude/: CLAUDE.md  cbass-credentials.md  opencode.json  settings.json  settings.local.json
.github/: issue_fix_prompt.md  pr_review_prompt.md  pull_request_template.md
Scripts/: update-container.sh
dashboard/: Dockerfile  package-lock.json  package.json
docs/: AUDIT_REPORT_2026_02_27.md  CONTRIBUTING_DOCS.md  DASHBOARD_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT_2STAGE.md  DEPLOYMENT_IP_ONLY.md  LLM_MODELS_GUIDE.md  OAUTH_SETUP_GUIDE.md  OPENCODE_SETUP.md  README.md  VIDEO_LANDING_PAGE_PLAN.md  cbass-architecture-diagram.md  cbass-architecture-map.md  cbass-credentials.md  cbass-dashboard-plan.md  cbass-deployment-status.md  deploy.sh  (+4 more)
mcp/flowise-enhanced/: README.md  pyproject.toml
mcp/flowise-enhanced/mcp_flowise_enhanced/: __init__.py  __main__.py  server.py
mcp/flowise-enhanced/mcp_flowise_enhanced/api/: __init__.py  client.py
mcp/flowise-enhanced/mcp_flowise_enhanced/converters/: __init__.py  types.py  wrapper.py
mcp/flowise-enhanced/mcp_flowise_enhanced/nodes/: __init__.py  builder.py  schema.py
mcp/flowise-enhanced/mcp_flowise_enhanced/validators/: __init__.py  local.py
(+107 files in other folders)
